# PokePets

./: .gitignore  CMakeLists.txt  README.md
data/csv/: pokemon_moves_edited.csv
data/xterm/: pkmn2xterm.sh
data/xterm/back/: 1.xterm  10.xterm  100.xterm  101.xterm  102.xterm  103.xterm  104.xterm  105.xterm  106.xterm  107.xterm  108.xterm  109.xterm  11.xterm  110.xterm  111.xterm  112.xterm  113.xterm  114.xterm  115.xterm  116.xterm  117.xterm  118.xterm  119.xterm  12.xterm  120.xterm  121.xterm  122.xterm  123.xterm  124.xterm  125.xterm  126.xterm  127.xterm  128.xterm  129.xterm  13.xterm  130.xterm  131.xterm  132.xterm  133.xterm  134.xterm  (+111 more)
data/xterm/front/: 1.xterm  10.xterm  100.xterm  101.xterm  102.xterm  103.xterm  104.xterm  105.xterm  106.xterm  107.xterm  108.xterm  109.xterm  11.xterm  110.xterm  111.xterm  112.xterm  113.xterm  114.xterm  115.xterm  116.xterm  117.xterm  118.xterm  119.xterm  12.xterm  120.xterm  121.xterm  122.xterm  123.xterm  124.xterm  125.xterm  126.xterm  127.xterm  128.xterm  129.xterm  13.xterm  130.xterm  131.xterm  132.xterm  133.xterm  134.xterm  (+111 more)
doc/: story.md
src/: Bulbasaur.cpp  Bulbasaur.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  Charmander.cpp  Charmander.h  Colors.h  DBParser.cpp  DBParser.h  Dialogue.md  Intro Dialogue.cpp  Move.cpp  Move.h  Nature.cpp  Nature.h  Parser.h  PokePets.cpp  Pokemon.cpp  Pokemon.h  PokemonBattle.cpp  PokemonBattle.h  PokemonBuilder.cpp  PokemonBuilder.h  PokemonSpecies.cpp  PokemonSpecies.h  Squirtle.cpp  Squirtle.h  Tester.cpp  Type.cpp  Type.h  gameDialogue.h  notes.md
test/: CMakeLists.txt  CSVReaderTest.cc  PokemonSpeciesTest.cc
test/csv/: ideal.csv  skip.csv
